--- a/en/assets/scss/_header.scss
+++ b/en/assets/scss/_header.scss
@@ -178,7 +178,7 @@
         top: 0;
         left: 0;
         right: 0;
-        z-index: 9999;
+        z-index: 9991;
     }
     .navbar-nav {
         >li {
